<resources>
    <string name="app_name">Toprağım</string>
    <string name="title_home">Anasayfa</string>
    <string name="title_offers">Teklifler</string>
    <string name="title_search">Arama</string>
    <string name="title_requests">Talepler</string>
    <string name="title_profile">Profil</string>
    <string name="details">Detaylar</string>
    <string name="make_offer">Teklif Ver</string>
    <string name="facebook_app_id">1574837236542797</string>
    <string name="fb_login_protocol_scheme">fb1574837236542797</string>
    <string name="facebook_client_token">a13faedf91d292d2d0fc34a2c636f2cb</string>
</resources>